--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -85,67 +85,90 @@ jobs:
           COOLIFY_API_URL: ${{ env.COOLIFY_API_URL }}
           COOLIFY_TOKEN: ${{ env.COOLIFY_TOKEN }}
         run: |
-          # 1. Get app ID (create project if it doesn't exist)
-          app_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/apps?name=$APP_NAME")
-          app_id=$(echo "$app_response" | jq -r '.data[0].id')
+          # 1. Get required information for Coolify v1 API
+          echo "Getting project information..."
+          projects_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects")
+          project_uuid=$(echo "$projects_response" | jq -r '.data[0].uuid // empty')
+          
+          if [ -z "$project_uuid" ]; then
+            echo "No project found. Please create a project in Coolify first."
+            exit 1
+          fi
+          echo "Using project UUID: $project_uuid"
 
-          if [ -z "$app_id" ] || [ "$app_id" == "null" ]; then
-            echo "App not found for $APP_NAME, creating new app/project..."
+          # 2. Get server information
+          servers_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/servers")
+          server_uuid=$(echo "$servers_response" | jq -r '.data[0].uuid // empty')
+          
+          if [ -z "$server_uuid" ]; then
+            echo "No server found. Please configure a server in Coolify first."
+            exit 1
+          fi
+          echo "Using server UUID: $server_uuid"
+
+          # 3. Get environment information  
+          environments_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects/$project_uuid/environments")
+          environment_uuid=$(echo "$environments_response" | jq -r '.data[0].uuid // empty')
+          environment_name=$(echo "$environments_response" | jq -r '.data[0].name // "production"')
+          
+          if [ -z "$environment_uuid" ]; then
+            echo "No environment found. Please create an environment in the project first."
+            exit 1
+          fi
+          echo "Using environment: $environment_name ($environment_uuid)"
+
+          # 4. Get destination information
+          destinations_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/servers/$server_uuid/destinations")
+          destination_uuid=$(echo "$destinations_response" | jq -r '.data[0].uuid // empty')
+          
+          if [ -z "$destination_uuid" ]; then
+            echo "No destination found. Please configure a destination on the server first."
+            exit 1
+          fi
+          echo "Using destination UUID: $destination_uuid"
+
+          # 5. Check if application already exists
+          echo "Checking for existing application $APP_NAME..."
+          applications_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects/$project_uuid/applications")
+          app_uuid=$(echo "$applications_response" | jq -r --arg name "$APP_NAME" '.data[] | select(.name == $name) | .uuid // empty')
+
+          if [ -z "$app_uuid" ]; then
+            echo "Application not found for $APP_NAME, creating new Docker image application..."
             
-            # Create a new app/project
+            # 6. Create Docker image application using the correct API
             create_app_response=$(curl -s -X POST \
               -H "Authorization: Bearer $COOLIFY_TOKEN" \
               -H "Content-Type: application/json" \
-              -d "{\"name\":\"$APP_NAME\",\"description\":\"Auto-generated app for $APP_NAME\"}" \
-              "$COOLIFY_API_URL/apps")
+              -d "{
+                \"project_uuid\": \"$project_uuid\",
+                \"server_uuid\": \"$server_uuid\",
+                \"environment_name\": \"$environment_name\",
+                \"environment_uuid\": \"$environment_uuid\",
+                \"destination_uuid\": \"$destination_uuid\",
+                \"name\": \"$APP_NAME\",
+                \"description\": \"Auto-generated application for $APP_NAME\",
+                \"docker_registry_image_name\": \"ghcr.io/${{ github.repository_owner }}/$APP_NAME\",
+                \"docker_registry_image_tag\": \"latest\",
+                \"ports_exposes\": \"3000\",
+                \"instant_deploy\": false
+              }" \
+              "$COOLIFY_API_URL/v1/applications/dockerimage")
             
-            app_id=$(echo "$create_app_response" | jq -r '.data.id')
+            app_uuid=$(echo "$create_app_response" | jq -r '.uuid // .data.uuid // empty')
             
-            if [ -z "$app_id" ] || [ "$app_id" == "null" ]; then
-              echo "Failed to create app for $APP_NAME"
-              echo "Create app response: $create_app_response"
+            if [ -z "$app_uuid" ]; then
+              echo "Failed to create application for $APP_NAME"
+              echo "Create application response: $create_app_response"
               exit 1
             fi
             
-            echo "Created new app with ID: $app_id"
+            echo "Created new application with UUID: $app_uuid"
           else
-            echo "Found existing app with ID: $app_id"
+            echo "Found existing application with UUID: $app_uuid"
           fi
 
-          # 2. Check if resource exists (resource name = app name)
-          resources_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/resources?name=$APP_NAME")
-          resource_id=$(echo "$resources_response" | jq -r '.data[0].id')
-
-          if [ -z "$resource_id" ] || [ "$resource_id" == "null" ]; then
-            echo "Resource not found, creating resource for $APP_NAME..."
-
-            create_resource_response=$(curl -s -X POST \
-              -H "Authorization: Bearer $COOLIFY_TOKEN" \
-              -H "Content-Type: application/json" \
-              -d "{\"name\":\"$APP_NAME\",\"type\":\"container\",\"config\":{\"dockerfilePath\":\"apps/$APP_NAME/Dockerfile\"}}" \
-              "$COOLIFY_API_URL/resources")
-
-            resource_id=$(echo "$create_resource_response" | jq -r '.data.id')
-            echo "Created resource with ID: $resource_id"
-          else
-            echo "Resource already exists with ID: $resource_id"
-          fi
-
-          # 3. Link resource to app if not linked
-          linked_resources=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/apps/$app_id/resources")
-          linked=$(echo "$linked_resources" | jq --arg rid "$resource_id" '.data | map(select(.id == $rid)) | length')
-
-          if [ "$linked" -eq 0 ]; then
-            echo "Linking resource $resource_id to app $app_id..."
-            curl -s -X POST \
-              -H "Authorization: Bearer $COOLIFY_TOKEN" \
-              -H "Content-Type: application/json" \
-              -d "{\"resourceId\": \"$resource_id\"}" \
-              "$COOLIFY_API_URL/apps/$app_id/resources"
-            echo "Resource linked."
-          else
-            echo "Resource already linked to app."
-          fi
+          # 3. The application should be ready for deployment
+          echo "Application $APP_NAME is ready for deployment with UUID: $app_uuid"
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -189,14 +212,29 @@ jobs:
           APP_NAME: ${{ matrix.app }}
         run: |
           echo "Triggering deployment for $APP_NAME"
-          # Get app ID first
-          app_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/apps?name=$APP_NAME")
-          app_id=$(echo "$app_response" | jq -r '.data[0].id')
+          
+          # Get project UUID
+          projects_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects")
+          project_uuid=$(echo "$projects_response" | jq -r '.data[0].uuid // empty')
+          
+          if [ -z "$project_uuid" ]; then
+            echo "Project UUID not found, cannot trigger deployment."
+            exit 1
+          fi
+          
+          # Get application UUID
+          applications_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects/$project_uuid/applications")
+          app_uuid=$(echo "$applications_response" | jq -r --arg name "$APP_NAME" '.data[] | select(.name == $name) | .uuid // empty')
 
-          if [ "$app_id" == "null" ] || [ -z "$app_id" ]; then
-            echo "App ID not found, cannot trigger deployment."
+          if [ -z "$app_uuid" ]; then
+            echo "Application UUID not found for $APP_NAME, cannot trigger deployment."
             exit 1
           fi
 
-          deploy_response=$(curl -s -X POST -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/apps/$app_id/deployments")
+          # Trigger deployment using Coolify v1 API
+          deploy_response=$(curl -s -X POST \
+            -H "Authorization: Bearer $COOLIFY_TOKEN" \
+            -H "Content-Type: application/json" \
+            "$COOLIFY_API_URL/v1/applications/$app_uuid/deploy")
+          
           echo "Deploy response: $deploy_response"
