--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -162,7 +162,7 @@ jobs:
                 \"description\": \"Auto-generated application for $APP_NAME\",
                 \"docker_registry_image_name\": \"ghcr.io/${{ github.repository_owner }}/$APP_NAME\",
                 \"docker_registry_image_tag\": \"latest\",
-                \"ports_exposes\": \"3000\",
+                \"ports_exposes\": \"80\",
                 \"instant_deploy\": false
               }" \
               "$COOLIFY_API_URL/v1/applications/dockerimage")
@@ -197,6 +197,140 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Generate Dockerfile for app
+        env:
+          APP_NAME: ${{ matrix.app }}
+        run: |
+          APP_DIR="./apps/$APP_NAME"
+          
+          echo "Generating Dockerfile for $APP_NAME in $APP_DIR"
+          
+          # Create Dockerfile
+          cat > "$APP_DIR/Dockerfile" << 'EOF'
+          # Use Node.js 18 as base image
+          FROM node:18-alpine AS build
+          
+          # Set working directory
+          WORKDIR /app
+          
+          # Copy package files
+          COPY package*.json ./
+          
+          # Install dependencies
+          RUN npm ci --only=production
+          
+          # Copy source code
+          COPY . .
+          
+          # Build the application
+          RUN npm run build
+          
+          # Production stage
+          FROM nginx:alpine
+          
+          # Copy built assets from build stage
+          COPY --from=build /app/dist /usr/share/nginx/html
+          
+          # Copy nginx configuration
+          COPY nginx.conf /etc/nginx/nginx.conf
+          
+          # Expose port 80
+          EXPOSE 80
+          
+          # Start nginx
+          CMD ["nginx", "-g", "daemon off;"]
+          EOF
+          
+          # Create nginx.conf
+          cat > "$APP_DIR/nginx.conf" << 'EOF'
+          events {
+              worker_connections 1024;
+          }
+          
+          http {
+              include       /etc/nginx/mime.types;
+              default_type  application/octet-stream;
+          
+              # Enable gzip compression
+              gzip on;
+              gzip_vary on;
+              gzip_min_length 1024;
+              gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+          
+              server {
+                  listen 80;
+                  server_name localhost;
+                  root /usr/share/nginx/html;
+                  index index.html;
+          
+                  # Enable CORS for Module Federation
+                  add_header 'Access-Control-Allow-Origin' '*' always;
+                  add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+                  add_header 'Access-Control-Allow-Headers' 'X-Requested-With, content-type, Authorization' always;
+          
+                  # Handle preflight requests
+                  if ($request_method = 'OPTIONS') {
+                      add_header 'Access-Control-Allow-Origin' '*';
+                      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS';
+                      add_header 'Access-Control-Allow-Headers' 'X-Requested-With, content-type, Authorization';
+                      add_header 'Access-Control-Max-Age' 1728000;
+                      add_header 'Content-Type' 'text/plain; charset=utf-8';
+                      add_header 'Content-Length' 0;
+                      return 204;
+                  }
+          
+                  # Serve static files
+                  location / {
+                      try_files $uri $uri/ /index.html;
+                      
+                      # Cache static assets
+                      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+                          expires 1y;
+                          add_header Cache-Control "public, immutable";
+                      }
+                  }
+          
+                  # Special handling for Module Federation remote entry
+                  location /remoteEntry.js {
+                      add_header 'Access-Control-Allow-Origin' '*' always;
+                      add_header 'Cache-Control' 'no-cache, no-store, must-revalidate' always;
+                      add_header 'Pragma' 'no-cache' always;
+                      add_header 'Expires' '0' always;
+                  }
+          
+                  # Health check endpoint
+                  location /health {
+                      access_log off;
+                      return 200 "OK\n";
+                      add_header Content-Type text/plain;
+                  }
+              }
+          }
+          EOF
+          
+          # Create .dockerignore
+          cat > "$APP_DIR/.dockerignore" << 'EOF'
+          node_modules
+          npm-debug.log
+          .git
+          .gitignore
+          README.md
+          FIXES.md
+          NAVBAR_FIX.md
+          ROUTING_GUIDE.md
+          .env
+          .env.local
+          .env.development.local
+          .env.test.local
+          .env.production.local
+          dist
+          build
+          coverage
+          .nyc_output
+          EOF
+          
+          echo "Generated Dockerfile, nginx.conf, and .dockerignore for $APP_NAME"
 
       - name: Extract Docker metadata
         id: meta
