--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -107,6 +107,14 @@ jobs:
           application_uuid=$(echo "$applications_response" | jq -r '.uuid // empty')
           application_name=$(echo "$applications_response" | jq -r '.name // empty')
 
+          if [ -z "$application_uuid" ]; then
+              echo "environment not found"
+              exit -1
+          fi
+
+          # 5. Check if application already exists
+          echo "Checking for existing application $APP_NAME..."
+          app_uuid=$(echo "$applications_response" | jq -r --arg name "$APP_NAME" '.applications[] | select(.name == $name) | .uuid // empty')
 
           if [ -z "$app_uuid" ]; then
             echo "Application not found for $APP_NAME, creating new Docker image application..."
@@ -141,47 +149,6 @@ jobs:
             echo "Found existing application with UUID: $app_uuid"
           fi
           echo "Using environment: $environment_name ($environment_uuid)"
-
-
-          # 5. Check if application already exists
-          echo "Checking for existing application $APP_NAME..."
-          app_uuid=$(echo "$applications_response" | jq -r --arg name "$APP_NAME" '.applications[] | select(.name == $name) | .uuid // empty')
-
-
-          if [ -z "$app_uuid" ]; then
-            echo "Application not found for $APP_NAME, creating new Docker image application..."
-            
-            # 6. Create Docker image application using the correct API
-            create_app_response=$(curl -s -X POST \
-              -H "Authorization: Bearer $COOLIFY_TOKEN" \
-              -H "Content-Type: application/json" \
-              -d "{
-                \"project_uuid\": \"$project_uuid\",
-                \"server_uuid\": \"$server_uuid\",
-                \"environment_name\": \"$environment_name\",
-                \"environment_uuid\": \"$environment_uuid\",
-                \"destination_uuid\": \"$destination_uuid\",
-                \"name\": \"$APP_NAME\",
-                \"description\": \"Auto-generated application for $APP_NAME\",
-                \"docker_registry_image_name\": \"ghcr.io/${{ github.repository_owner }}/$APP_NAME\",
-                \"docker_registry_image_tag\": \"latest\",
-                \"ports_exposes\": \"80\",
-                \"instant_deploy\": false
-              }" \
-              "$COOLIFY_API_URL/v1/applications/dockerimage")
-            
-            app_uuid=$(echo "$create_app_response" | jq -r '.uuid // .data.uuid // empty')
-            
-            if [ -z "$app_uuid" ]; then
-              echo "Failed to create application for $APP_NAME"
-              echo "Create application response: $create_app_response"
-              exit 1
-            fi
-            
-            echo "Created new application with UUID: $app_uuid"
-          else
-            echo "Found existing application with UUID: $app_uuid"
-          fi
 
           # 3. The application should be ready for deployment
           echo "Application $APP_NAME is ready for deployment with UUID: $app_uuid"
@@ -364,16 +331,26 @@ jobs:
         run: |
           echo "Triggering deployment for $APP_NAME"
           
-          # Use the project UUID from environment
-          project_uuid=$PROJECT_ID
-          
-          # Get applications in the project environment
-          applications_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects/$project_uuid/production")
-          echo "Applications response: $applications_response"
-          
+             project_uuid=${PROJECT_ID}
+          server_uuid=${SERVER_ID}
+
+          echo "Using project UUID: $PROJECT_ID"
+
+          # echo "URL: $COOLIFY_API_URL/v1/projects/$project_uuid/$DEPLOYMENT"
+          # echo "Token: $COOLIFY_TOKEN"
+          # 3. Get application information  
+          applications_response=$(curl -v -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects/$project_uuid/$DEPLOYMENT")
+   
+          application_uuid=$(echo "$applications_response" | jq -r '.uuid // empty')
+          application_name=$(echo "$applications_response" | jq -r '.name // empty')
+          if [ -z "$application_uuid" ]; then
+              echo "environment not found"
+              exit -1
+          fi
           # Find the application by name
           app_uuid=$(echo "$applications_response" | jq -r --arg name "$APP_NAME" '.applications[]? | select(.name == $name) | .uuid // empty')
 
+          
           if [ -z "$app_uuid" ]; then
             echo "Application UUID not found for $APP_NAME, cannot trigger deployment."
             echo "Available applications:"
